CMAKE_MINIMUM_REQUIRED( VERSION 2.8 ) 
PROJECT( hnode_sprinkler_controller ) 

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/" )

SET( HNODE_SPRINKLER_CTRL_SRC
     ${CMAKE_SOURCE_DIR}/src/hnode.cpp
     ${CMAKE_SOURCE_DIR}/src/ilink-obj.c
     ${CMAKE_SOURCE_DIR}/src/i2c_mcp23008.c
     ${CMAKE_SOURCE_DIR}/src/mcp23008-obj.c
     ${CMAKE_SOURCE_DIR}/src/sprinkler_controller.c

     ${CMAKE_SOURCE_DIR}/src/REST/RESTDeamon.cpp
     ${CMAKE_SOURCE_DIR}/src/REST/RESTRepresentation.cpp
     ${CMAKE_SOURCE_DIR}/src/REST/RESTRequest.cpp
     ${CMAKE_SOURCE_DIR}/src/REST/RESTResource.cpp
)

FIND_PACKAGE(GLIB REQUIRED)
FIND_PACKAGE(GOBJECT REQUIRED)
FIND_PACKAGE(AVAHI REQUIRED)
FIND_PACKAGE(HNODE REQUIRED)
FIND_PACKAGE(MICROHTTPD REQUIRED)

INCLUDE_DIRECTORIES( ${GLIB_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${GOBJECT_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${AVAHI_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${HNODE_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${MICROHTTPD_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src )

ADD_EXECUTABLE( hnode_sprinkler_controller_daemon ${HNODE_SPRINKLER_CTRL_SRC} ) 
TARGET_LINK_LIBRARIES( hnode_sprinkler_controller_daemon ${GLIB_LIBRARIES} )
TARGET_LINK_LIBRARIES( hnode_sprinkler_controller_daemon ${GOBJECT_LIBRARIES} )
TARGET_LINK_LIBRARIES( hnode_sprinkler_controller_daemon ${AVAHI_LIBRARIES} )
TARGET_LINK_LIBRARIES( hnode_sprinkler_controller_daemon ${HNODE_LIBRARIES} )
TARGET_LINK_LIBRARIES( hnode_sprinkler_controller_daemon ${MICROHTTPD_LIBRARIES} )

